# python-project-starter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
res/: config.yml  config_dev.yml  config_prod.yml  config_test.yml
src/: demo.py
src/common/: env.py  path.py  util.py  uuid.py
src/component/: ConfigManager.py  LogManager.py
test/: t_env.py
